tests/spec/non_conformant/errors/import/miss/mixin/control_else/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/miss/mixin/control-else"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("control-else")
}

mod inside;

mod outside;
